--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                </div>                
+                </div> <button class="parametro-senha_botao" >-</button>
+                <p class=" parametro-senha_texto" >12</p>
+                <button class="parametro-senha_botao" >+</button>
+
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                 </div>
