--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                     <div class="barra"></div>
-                    <div class="forca"></div>
-                    
+                    <div class="forca fraca"></div>
+                    <div class="parametro senha-
                 </div>
             </div>
         </div>
